spacing issues are done

--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -53,7 +53,7 @@
   }
 }
 .page-body-timer {
-  margin-top: $main-header + $timer-height;
+  margin-top: 30px + $timer-height;
 }
 
 @media screen and (min-width: 992px) {
